# skat

./: Cargo.toml  LICENSE  Procfile  README  README.md  RustConfig  makefile  todo.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: app.rs  config.rs  game_player_view.rs  lib.rs  player_view.rs
src/: card.rs  deck.rs  game.rs  lib.rs  main.rs
static/: index.html  main.js
