[package]
name = "skat"
version = "0.1.0"
authors = [
    "Jack Hanslope <jackhansp@btinternet.com>",
    "Jakob Schmutz <jakob@schmutz.co.uk>",
]
edition = "2018"

[workspace]
members = [
    "backend",
    "frontend",
]

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
