[package]
name = "frontend"
version = "0.1.0"
authors = [
    "Jack Hanslope <jackhansp@btinternet.com>",
    "Jakob Schmutz <jakob@schmutz.co.uk>",
]
edition = "2018"

[dependencies]
yew = { version = "0.14.0", features = ["std_web"] }
js-sys = "0.3"
wasm-bindgen = "^0.2"
skat = { path = "../" }
serde_json = "1.*"

[lib]
crate-type = ["cdylib"]
