[package]
name = "frontend"
version = "0.1.0"
authors = [
    "Jack Hanslope <jackhansp@btinternet.com>",
    "Jakob Schmutz <jakob@schmutz.co.uk>",
]
edition = "2018"

[dependencies]
yew = "0.17"
js-sys = "0.3"
wasm-bindgen = "^0.2"
skat = { path = "../" }
serde_json = "1.*"
reqwest = "0.10"

[lib]
crate-type = ["cdylib"]
